--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -25,7 +25,7 @@
 #define TEXT_PAUSE _("PAUSE") // Pause text, Castle Courses
 #define TEXT_HUD_CONGRATULATIONS _("CONGRATULATIONS") // Course Complete Text, Bowser Courses
 
-#if defined(VERSION_JP) || defined(VERSION_SH) // JAPANESE
+#if defined(VERSION_JP) // JAPANESE
 
 /**
  * File Select Text
